--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-# For projects that use the Waf build system: https://waf.io/
-# Dot-hidden on Unix-like systems
-.waf-*-*/
-.waf3-*-*/
-# Hidden directory on Windows (no dot)
-waf-*-*/
-waf3-*-*/
-# Lockfile
-.lock-waf_*_build
+.idea/
+tests/_support/_generated/
+vendor/*
+.branch.local
