--- a/codeception.yml
+++ b/codeception.yml
@@ -1,4 +1,4 @@
-namespace: BranchoTest
+namespace: GitterTest
 paths:
     tests: tests
     output: tests/_output
@@ -12,11 +12,11 @@ coverage:
         - src/*
 suites:
     Command:
-        path: BranchoTest/Command
+        path: GitterTest/Command
         class_name: CommandTester
         modules:
             enabled:
-                - \BranchoTest\Helper\CommandHelper
+                - \GitterTest\Helper\CommandHelper
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
